--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,13 @@
-body {
+html, body {
+    height: 100%;
+}
+
+#form-container {
     padding-top: 20px;
+    padding-bottom: 20px;
+    display: flex;
+    flex-flow: column;
+    height: 100%;
 }
 
 #stdout-container {
@@ -8,4 +16,5 @@ body {
     height: 100px;
     padding: 10px;
     margin-top: 20px;
+    flex-grow: 1; 
 }
